I have made header sticky so it scrolls with the user. The rest of the webpage is also aligned correctly so it doesnt overlap. adjusted with position: fixed; and width: 200px; /* Adjust width as needed */     overflow-y: auto; /* Allows scrolling if content exceeds viewport height */

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,8 @@ header {
     top: 0;
     left: 0;
     height: 100%;
+    width: 200px; /* Adjust width as needed */
+    overflow-y: auto; /* Allows scrolling if content exceeds viewport height */
 }
 
 
@@ -47,6 +49,7 @@ nav {
 
 nav ul {
     display: flex;
+    flex-direction: column;
     margin: 0;
     list-style-type: none;
     padding-top: 0px;
@@ -61,7 +64,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     padding: 15px 10px; /*changes spacing between the links */
-    display: block;
+    display: flex;
     color: whitesmoke;
 }
 
@@ -86,11 +89,20 @@ nav ul li a:hover {
 
 /* introduction section */
 
+main {
+    margin-left: 200px; /* match width of header */
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+
 #introduction {
     margin: 0 auto;
     padding: 20px;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 #introduction h1 {
@@ -106,6 +118,14 @@ nav ul li a:hover {
     padding-top: 20px;
     font-family:Arial, Helvetica, sans-serif
 }
+
+/* hr section appropriate styling to ensure it is visible */
+hr {
+    margin: 10px 0; 
+    border: none;
+    border-top: 3px solid #ccc; 
+}
+
 
 
 /* projects section */
